<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#86e5fa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:textSize="30dp"
        android:textColor="#000000"
        android:text="@string/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_button"
        android:id="@+id/button"
        android:onClick="findMood"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeling"
        android:id="@+id/feelingText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_above="@+id/linear2"
        android:layout_below="@+id/button" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear2"
        android:layout_above="@+id/linear3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yoga_text"
            android:id="@+id/textView2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yoga_type"
            android:orientation="horizontal">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga1_radio"
                android:id="@+id/radioButton1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga2_radio"
                android:id="@+id/radioButton2"
                android:layout_weight="1"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/name_editText"
            android:hint="@string/name_edit"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="39dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secretive_check"
            android:id="@+id/checkBox2"
            android:layout_gravity="bottom"
            android:layout_weight="1"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enlightened_check"
            android:id="@+id/checkBox1"
            android:layout_gravity="bottom"
            android:layout_weight="1"/>
    </LinearLayout>

    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:id="@+id/energy_toggle"
            android:layout_weight="1"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear4"
        android:layout_below="@+id/linear3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meditate_switch"
            android:id="@+id/switch1"
            android:layout_alignBottom="@+id/spinner"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:id="@+id/spinner"
            android:entries="@array/moods"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="144dp" />
    </LinearLayout>

</RelativeLayout>
